[gd_scene load_steps=23 format=3 uid="uid://b3b43gxvrvwld"]

[ext_resource type="Script" path="res://src/enemies/fire.gd" id="1_jcbqv"]
[ext_resource type="PackedScene" uid="uid://12lmwy38utnt" path="res://src/enemies/hitbox.tscn" id="2_m2ccd"]
[ext_resource type="Texture2D" uid="uid://djm24aon8tm48" path="res://resources/Enemies/Fire/fire_column_medium_4.png" id="3_llao8"]
[ext_resource type="Texture2D" uid="uid://bc7xdghqaxcel" path="res://resources/Enemies/Fire/fire_column_medium_5.png" id="4_2f702"]
[ext_resource type="Texture2D" uid="uid://bn52g6xeibfrd" path="res://resources/Enemies/Fire/fire_column_medium_6.png" id="5_2o6m5"]
[ext_resource type="Texture2D" uid="uid://02uv2t6ntchy" path="res://resources/Enemies/Fire/fire_column_medium_7.png" id="6_6x3ju"]
[ext_resource type="Texture2D" uid="uid://drxcyq8ehvh6c" path="res://resources/Enemies/Fire/fire_column_medium_8.png" id="7_jyqxs"]
[ext_resource type="Texture2D" uid="uid://bmij2d5a3y4ue" path="res://resources/Enemies/Fire/fire_column_medium_9.png" id="8_teawx"]
[ext_resource type="Texture2D" uid="uid://cpomw88oyib6t" path="res://resources/Enemies/Fire/fire_column_medium_10.png" id="9_fn8t7"]
[ext_resource type="Texture2D" uid="uid://4xwtuyn588s7" path="res://resources/Enemies/Fire/fire_column_medium_11.png" id="10_ghfvp"]
[ext_resource type="Texture2D" uid="uid://dtfxj2yt5pqg8" path="res://resources/Enemies/Fire/fire_column_medium_12.png" id="11_mw2ng"]
[ext_resource type="Texture2D" uid="uid://bnnvxbjqklyx7" path="res://resources/Enemies/Fire/fire_column_medium_13.png" id="12_gbiws"]
[ext_resource type="Texture2D" uid="uid://c4tya25kte445" path="res://resources/Enemies/Fire/fire_column_medium_14.png" id="13_6x7x4"]
[ext_resource type="Texture2D" uid="uid://gp6sv6x1fud2" path="res://resources/Enemies/Fire/fire_column_medium_1.png" id="14_ft784"]
[ext_resource type="Texture2D" uid="uid://b0myedxhm0ki4" path="res://resources/Enemies/Fire/fire_column_medium_2.png" id="15_8et8w"]
[ext_resource type="Texture2D" uid="uid://dog57oktnmpkr" path="res://resources/Enemies/Fire/fire_column_medium_3.png" id="16_4frtf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_424kq"]
size = Vector2(13, 50)

[sub_resource type="Animation" id="Animation_58cjl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireBase:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_ld7wr"]
resource_name = "fire_burn"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_llao8"), ExtResource("4_2f702"), ExtResource("5_2o6m5"), ExtResource("6_6x3ju"), ExtResource("7_jyqxs")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireBase:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_ckn15"]
resource_name = "fire_end"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_teawx"), ExtResource("9_fn8t7"), ExtResource("10_ghfvp"), ExtResource("11_mw2ng"), ExtResource("12_gbiws"), ExtResource("13_6x7x4"), null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireBase:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [null, ExtResource("14_ft784")]
}

[sub_resource type="Animation" id="Animation_iu7iq"]
resource_name = "fire_start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("14_ft784"), ExtResource("15_8et8w"), ExtResource("16_4frtf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireBase:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_86nhf"]
_data = {
"RESET": SubResource("Animation_58cjl"),
"fire_burn": SubResource("Animation_ld7wr"),
"fire_end": SubResource("Animation_ckn15"),
"fire_start": SubResource("Animation_iu7iq")
}

[node name="Fire" type="Node2D"]
script = ExtResource("1_jcbqv")

[node name="Hitbox" parent="." instance=ExtResource("2_m2ccd")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, -25)
shape = SubResource("RectangleShape2D_424kq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -49)
scale = Vector2(1, 1.4)
texture = ExtResource("3_llao8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_86nhf")
}

[node name="Delay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BurnTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FireBase" type="Sprite2D" parent="."]
position = Vector2(0, -35)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
[connection signal="timeout" from="BurnTime" to="." method="_on_burn_time_timeout"]
